still working on HW3

--- a/assignments/A3.md
+++ b/assignments/A3.md
@@ -116,7 +116,7 @@
   * Write a function `getAllLines` that takes a `Board` value and produces a list of `Line` values.
     * Create a nested list containing three sub-lists:
       1. All of the board's horizontal lines (this is just the input board itself)
-      2. All of the board's vertical lines (this can be produced easily using the built-in [transpose](https://hackage.haskell.org/package/base-4.17.0.0/docs/Data-List.html#v:transpose) function)
+      2. All of the board's vertical lines (this can be produced easily using the built-in [transpose](https://hackagtre.haskell.org/package/base-4.17.0.0/docs/Data-List.html#v:transpose) function)
       3. The board's diagonal lines (create a two-element list containing the results of applying `getDiag1` and `getDiag2`)
     * Flatten the nested list to produce the final list of `Line` values.
   * Test `getAllLines` in your REPL session:
