--- a/assignments/A4.md
+++ b/assignments/A4.md
@@ -139,9 +139,9 @@
       ```
     * In a local scope, apply `putSquare` on the input board and store the updated board it produces as an intermediate variable for reuse elsewhere. Be sure to only use this new board variable from this point forward, and not the original board (which has become "stale"), or your program will have unexpected behavior.
     * We'll spare you the tedium of testing this function: if you followed the instructions and your implementations of `putSquare` and `getGameState` are correct, the function should work as expected.
-
+from `A3` using `zipWith`.
 ### **Q#10**:
-  * Refactor `prependRowIndices` from `A3` using `zipWith`.
+  * Refactor `prependRowIndices` 
   * You'll no longer need `indexRowStrings` from `A2` in this function, but review this function as needed to reproduce the relevant portion of its behavior.
   * Which function should be supplied as an argument to `zipWith` to reproduce the same behavior as the original version?
   * Test `prependRowIndices` in your REPL session:
